k8s/apps/manifests/ai/ollama.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ollama
  labels:
    name: ollama
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama-rocm
  namespace: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama-rocm
  template:
    metadata:
      labels:
        app: ollama-rocm
    spec:
      containers:
        - name: ollama
          image: ollama/ollama:rocm
          ports:
            - containerPort: 11434
              name: ollama
          volumeMounts:
            - mountPath: /root/.ollama
              name: ollama-data
          resources:
            requests:
              memory: "32Gi"
              amd.com/gpu: 1
            limits:
              memory: "100Gi"
              amd.com/gpu: 1
          livenessProbe:
            httpGet:
              path: /
              port: 11434
              scheme: HTTP
            initialDelaySeconds: 5
            timeoutSeconds: 2
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /
              port: 11434
              scheme: HTTP
            initialDelaySeconds: 5
            timeoutSeconds: 2
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /
              port: 11434
              scheme: HTTP
            initialDelaySeconds: 5
            timeoutSeconds: 2
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 30
      volumes:
        - name: ollama-data
          persistentVolumeClaim:
            claimName: ollama-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: ollama-rocm-service
  namespace: ollama
spec:
  selector:
    app: ollama-rocm
  ports:
    - protocol: TCP
      port: 11434
      targetPort: 11434
      name: ollama
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/traefik.io/ingressroute_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ollama-rocm-ingress-route
  namespace: ollama
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`ollama.apps.chesurah.net`)
      services:
        - name: ollama-rocm-service
          namespace: ollama
          port: 11434
  tls:
    secretName: apps-chesurah-net-prod-tls
